--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 colorama==0.4.4
 defusedxml==0.7.1
+dj-database-url==0.5.0
 Django==3.2.8
+django-heroku==0.3.1
 djangorestframework==3.12.4
 httpie==2.6.0
 idna==3.3
+psycopg2==2.9.1
 Pygments==2.10.0
 PySocks==1.7.1
 pytz==2021.3
@@ -14,3 +17,4 @@ requests==2.26.0
 requests-toolbelt==0.9.1
 sqlparse==0.4.2
 urllib3==1.26.7
+whitenoise==5.3.0
