--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==0.5.0
 Django==3.2.8
 django-heroku==0.3.1
 djangorestframework==3.12.4
+gunicorn==20.1.0
 httpie==2.6.0
 idna==3.3
 psycopg2==2.9.1
